[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/img/UI/button_transparent.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/video/splashscreen.ogv" type="VideoStream" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/text20.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menu.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/text20bold.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/img/UI/new.png" type="Texture" id=7]
[ext_resource path="res://assets/img/UI/NewGame.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/judul1.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/img/UI/Continue.png" type="Texture" id=10]
[ext_resource path="res://assets/img/UI/Exit.png" type="Texture" id=11]
[ext_resource path="res://assets/fonts/judul.tres" type="DynamicFont" id=12]
[ext_resource path="res://assets/scene/UI/FPS.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/img/UI/MENU_BOX_1.png" type="Texture" id=14]
[ext_resource path="res://assets/img/UI/BOX_EQUIP_2.png" type="Texture" id=15]
[ext_resource path="res://assets/fonts/uibutton.tres" type="DynamicFont" id=16]
[ext_resource path="res://assets/fonts/text16.tres" type="DynamicFont" id=17]
[ext_resource path="res://OptionMenu.gd" type="Script" id=18]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=3]
resource_name = "ButtonContinueFocus"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/VBoxContainer/Continue:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/VBoxContainer/Continue:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -35, 0 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/VBoxContainer/Exit:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/VBoxContainer/Exit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ), Vector2( -35, 200 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/VBoxContainer/NewGame:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/VBoxContainer/NewGame:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ), Vector2( -35, 100 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/VBoxContainer/Continue:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/VBoxContainer/Continue:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/VBoxContainer/NewGame:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visual/VBoxContainer/NewGame:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visual/VBoxContainer/Exit:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Visual/VBoxContainer/Exit:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.00392157, 0.14902, 0.14902, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.00392157, 0.14902, 0.14902, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0313726, 0.215686, 0.188235, 1 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 19.0
bg_color = Color( 0.533333, 0.25098, 0.152941, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_top = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.666667, 0.654902, 0.654902, 1 )
border_color = Color( 0.666667, 0.654902, 0.654902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 12.0
expand_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
corner_radius_top_left = 6
corner_radius_bottom_left = 6
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="Theme" id=13]

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Loading" type="CanvasLayer" parent="."]
layer = 2

[node name="FPS" parent="Loading" instance=ExtResource( 13 )]

[node name="Menu" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 5 )

[node name="Menu" type="Control" parent="Menu"]
visible = false
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/Menu"]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.00392157, 0.14902, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Menu/Menu"]
margin_left = 30.0
margin_right = 1470.0
margin_bottom = 900.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Visual" type="CenterContainer" parent="Menu/Menu"]
margin_left = 320.823
margin_top = 255.654
margin_right = 960.823
margin_bottom = 355.654
rect_scale = Vector2( 0.5, 0.5 )
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Menu/Visual"]
show_behind_parent = true
margin_left = -160.0
margin_top = -150.0
margin_right = 160.0
margin_bottom = 150.0
custom_constants/separation = 0

[node name="Continue" type="TextureButton" parent="Menu/Menu/Visual/VBoxContainer"]
modulate = Color( 0.337255, 0.333333, 0.333333, 1 )
margin_right = 320.0
margin_bottom = 100.0
disabled = true
texture_normal = ExtResource( 10 )

[node name="NewGame" type="TextureButton" parent="Menu/Menu/Visual/VBoxContainer"]
margin_top = 100.0
margin_right = 320.0
margin_bottom = 200.0
texture_normal = ExtResource( 8 )

[node name="Exit" type="TextureButton" parent="Menu/Menu/Visual/VBoxContainer"]
margin_top = 200.0
margin_right = 320.0
margin_bottom = 300.0
texture_normal = ExtResource( 11 )

[node name="Button" type="CenterContainer" parent="Menu/Menu"]
margin_left = 320.823
margin_top = 255.654
margin_right = 960.823
margin_bottom = 355.654
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Menu/Button"]
margin_left = -60.0
margin_top = -70.0
margin_right = 60.0
margin_bottom = 70.0
custom_constants/separation = 15

[node name="Continue" type="Button" parent="Menu/Menu/Button/VBoxContainer"]
modulate = Color( 0.337255, 0.333333, 0.333333, 1 )
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
disabled = true

[node name="NewGame" type="Button" parent="Menu/Menu/Button/VBoxContainer"]
margin_top = 55.0
margin_right = 120.0
margin_bottom = 90.0
rect_min_size = Vector2( 120, 35 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = SubResource( 2 )

[node name="Exit" type="Button" parent="Menu/Menu/Button/VBoxContainer"]
margin_top = 105.0
margin_right = 120.0
margin_bottom = 140.0
rect_min_size = Vector2( 120, 35 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Menu"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 640, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="Label" parent="Menu/Menu/VBoxContainer"]
margin_right = 640.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Label" type="Label" parent="Menu/Menu/VBoxContainer"]
margin_top = 44.0
margin_right = 640.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 12 )
text = "STORY"
align = 1

[node name="Label2" type="Label" parent="Menu/Menu/VBoxContainer"]
margin_top = 85.0
margin_right = 640.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 9 )
text = "OF"
align = 1

[node name="Label3" type="Label" parent="Menu/Menu/VBoxContainer"]
margin_top = 118.0
margin_right = 640.0
margin_bottom = 155.0
custom_fonts/font = ExtResource( 12 )
text = "Nature Spirit"
align = 1

[node name="Margin2" type="Label" parent="Menu/Menu/VBoxContainer"]
margin_top = 159.0
margin_right = 640.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 40 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu/Menu"]
anims/ButtonContinueFocus = SubResource( 3 )
anims/ButtonExitFocus = SubResource( 4 )
anims/ButtonNewFocus = SubResource( 5 )
anims/ButtonNormal = SubResource( 6 )

[node name="Button2" type="Button" parent="Menu/Menu"]
margin_left = -0.40921
margin_top = 0.291855
margin_right = 79.5908
margin_bottom = 30.2919
rect_min_size = Vector2( 80, 30 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 16 )
text = "Option"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionContainer" type="Control" parent="Menu/Menu"]
visible = false
margin_left = 117.684
margin_top = 37.0621
margin_right = 117.684
margin_bottom = 637.062
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/Menu/OptionContainer"]
margin_left = -235.367
margin_top = -74.1243
margin_right = 1264.63
margin_bottom = 725.876
color = Color( 0.25098, 0.243137, 0.243137, 0.803922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Menu/Menu/OptionContainer"]
margin_left = 33.0
margin_right = 799.0
margin_bottom = 556.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Menu/OptionContainer"]
margin_left = 70.0
margin_top = 84.6531
margin_right = 760.0
margin_bottom = 510.653
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicTag" type="Label" parent="Menu/Menu/OptionContainer/VBoxContainer"]
margin_right = 690.0
margin_bottom = 28.0
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 6 )
text = "Volume"

[node name="BGM" type="VBoxContainer" parent="Menu/Menu/OptionContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 690.0
margin_bottom = 102.0
custom_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/Menu/OptionContainer/VBoxContainer/BGM"]
margin_right = 690.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="Menu/Menu/OptionContainer/VBoxContainer/BGM/HBoxContainer2"]
margin_right = 45.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "BGM"

[node name="Volume" type="Label" parent="Menu/Menu/OptionContainer/VBoxContainer/BGM/HBoxContainer2"]
margin_left = 49.0
margin_right = 649.0
margin_bottom = 28.0
rect_min_size = Vector2( 600, 0 )
custom_fonts/font = ExtResource( 4 )
text = "100%"
align = 2

[node name="HSlider" type="HSlider" parent="Menu/Menu/OptionContainer/VBoxContainer/BGM"]
margin_top = 38.0
margin_right = 690.0
margin_bottom = 54.0
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area = SubResource( 12 )
value = 100.0

[node name="SFX" type="VBoxContainer" parent="Menu/Menu/OptionContainer/VBoxContainer"]
margin_top = 122.0
margin_right = 690.0
margin_bottom = 176.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Menu/OptionContainer/VBoxContainer/SFX"]
margin_right = 690.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="Menu/Menu/OptionContainer/VBoxContainer/SFX/HBoxContainer"]
margin_right = 45.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "SFX"

[node name="Volume" type="Label" parent="Menu/Menu/OptionContainer/VBoxContainer/SFX/HBoxContainer"]
margin_left = 49.0
margin_right = 649.0
margin_bottom = 28.0
rect_min_size = Vector2( 600, 0 )
custom_fonts/font = ExtResource( 4 )
text = "100%"
align = 2

[node name="HSlider" type="HSlider" parent="Menu/Menu/OptionContainer/VBoxContainer/SFX"]
margin_top = 38.0
margin_right = 690.0
margin_bottom = 54.0
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area = SubResource( 12 )
value = 100.0

[node name="Margin" type="Label" parent="Menu/Menu/OptionContainer/VBoxContainer"]
margin_top = 196.0
margin_right = 690.0
margin_bottom = 210.0

[node name="Label2" type="Label" parent="Menu/Menu/OptionContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 690.0
margin_bottom = 258.0
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 6 )
text = "Other"

[node name="Other" type="HBoxContainer" parent="Menu/Menu/OptionContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 690.0
margin_bottom = 318.0

[node name="FPS" type="CheckButton" parent="Menu/Menu/OptionContainer/VBoxContainer/Other"]
margin_right = 141.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 4 )
custom_constants/hseparation = 10
pressed = true
text = "FPS :"

[node name="Label3" type="Label" parent="Menu/Menu/OptionContainer/VBoxContainer"]
margin_top = 338.0
margin_right = 690.0
margin_bottom = 366.0
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 6 )
text = "About"

[node name="Save" type="HBoxContainer" parent="Menu/Menu/OptionContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 690.0
margin_bottom = 426.0
custom_constants/separation = 40
alignment = 2

[node name="About" type="Button" parent="Menu/Menu/OptionContainer/VBoxContainer/Save"]
margin_left = 198.0
margin_right = 298.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = ExtResource( 4 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="Menu/Menu/OptionContainer/VBoxContainer/Save"]
margin_left = 338.0
margin_right = 550.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = ExtResource( 4 )
text = "Reset Save Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelOut" type="Button" parent="Menu/Menu/OptionContainer/VBoxContainer/Save"]
margin_left = 590.0
margin_right = 690.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 40 )
custom_fonts/font = ExtResource( 4 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="Control" parent="Menu/Menu/OptionContainer"]
visible = false
margin_left = 6.69043
margin_top = 183.839
margin_right = 499.69
margin_bottom = 355.839
theme = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu/Menu/OptionContainer/ConfirmationDialog"]
margin_left = -248.639
margin_top = -337.048
margin_right = 1251.36
margin_bottom = 662.952
rect_min_size = Vector2( 1500, 1000 )
color = Color( 0.478431, 0.478431, 0.478431, 0.811765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Menu/Menu/OptionContainer/ConfirmationDialog"]
margin_left = -7.0
margin_top = -165.0
margin_right = 817.0
margin_bottom = 358.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Menu/OptionContainer/ConfirmationDialog"]
margin_left = 84.0
margin_top = -94.0
margin_right = 747.0
margin_bottom = 294.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Menu/OptionContainer/ConfirmationDialog/VBoxContainer"]
margin_right = 663.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 6 )
text = "About"
align = 1

[node name="Label2" type="Label" parent="Menu/Menu/OptionContainer/ConfirmationDialog/VBoxContainer"]
margin_top = 47.0
margin_right = 663.0
margin_bottom = 297.0
rect_min_size = Vector2( 0, 250 )
custom_fonts/font = ExtResource( 17 )
text = "Lide Game is a small team that makes indie games. We are just learning so there are probably a lot of bugs and less features in this game. We apologize about that. We will continue to improve continuously.
Credits
BGM - Eric Matyas. SFX - ViRiX (David Mckee), Other. Some Character Designs - Akbar Hari Mukti, Muttafiah. Programmer - Herlandro T."
align = 3
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Menu/OptionContainer/ConfirmationDialog/VBoxContainer"]
margin_top = 318.0
margin_right = 663.0
margin_bottom = 346.0
custom_constants/separation = 15

[node name="Cancel" type="Button" parent="Menu/Menu/OptionContainer/ConfirmationDialog/VBoxContainer/HBoxContainer"]
margin_right = 663.0
margin_bottom = 28.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 17 )
text = "Cancel"

[node name="VideoPlayer" type="VideoPlayer" parent="Menu"]
margin_right = 640.0
margin_bottom = 360.0
stream = ExtResource( 2 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="newgame_started" from="Menu" to="." method="_on_Menu_newgame_started"]
[connection signal="mouse_entered" from="Menu/Menu/Button/VBoxContainer/Continue" to="Menu" method="_on_Continue_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Menu/Button/VBoxContainer/Continue" to="Menu" method="_on_Continue_mouse_exited"]
[connection signal="pressed" from="Menu/Menu/Button/VBoxContainer/Continue" to="Menu" method="_on_Continue_pressed"]
[connection signal="mouse_entered" from="Menu/Menu/Button/VBoxContainer/NewGame" to="Menu" method="_on_NewGame_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Menu/Button/VBoxContainer/NewGame" to="Menu" method="_on_NewGame_mouse_exited"]
[connection signal="pressed" from="Menu/Menu/Button/VBoxContainer/NewGame" to="Menu" method="_on_NewGame_pressed"]
[connection signal="mouse_entered" from="Menu/Menu/Button/VBoxContainer/Exit" to="Menu" method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Menu/Button/VBoxContainer/Exit" to="Menu" method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Menu/Menu/Button/VBoxContainer/Exit" to="Menu" method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu/Menu/Button2" to="Menu" method="_on_Button2_pressed"]
[connection signal="value_changed" from="Menu/Menu/OptionContainer/VBoxContainer/BGM/HSlider" to="Menu/Menu/OptionContainer" method="_on_BGMSlider_value_changed"]
[connection signal="value_changed" from="Menu/Menu/OptionContainer/VBoxContainer/SFX/HSlider" to="Menu/Menu/OptionContainer" method="_on_SFXSlider_value_changed"]
[connection signal="toggled" from="Menu/Menu/OptionContainer/VBoxContainer/Other/FPS" to="Menu/Menu/OptionContainer" method="_on_FPS_toggled"]
[connection signal="pressed" from="Menu/Menu/OptionContainer/VBoxContainer/Save/About" to="Menu/Menu/OptionContainer" method="_on_About_pressed"]
[connection signal="pressed" from="Menu/Menu/OptionContainer/VBoxContainer/Save/Reset" to="Menu/Menu/OptionContainer" method="_on_Reset_pressed"]
[connection signal="pressed" from="Menu/Menu/OptionContainer/VBoxContainer/Save/CancelOut" to="Menu/Menu/OptionContainer" method="_on_CancelOut_pressed"]
[connection signal="pressed" from="Menu/Menu/OptionContainer/ConfirmationDialog/VBoxContainer/HBoxContainer/Cancel" to="Menu/Menu/OptionContainer" method="_on_Cancel_pressed"]
[connection signal="finished" from="Menu/VideoPlayer" to="Menu" method="_on_VideoPlayer_finished"]
